Fix overflow for table filters

--- a/frontend/web/styles/project/_modals.scss
+++ b/frontend/web/styles/project/_modals.scss
@@ -212,11 +212,12 @@ $side-width: 750px;
   }
 }
 @include media-breakpoint-down(lg) {
-  .inline-modal-open {
-    overflow: hidden;
+  .inline-modal__list {
+    max-height: none;
   }
   .inline-modal, .inline-modal.table-filter {
     position: fixed;
+    overflow-y: auto;
     top: 0;
     left: 0;
     right: 0;
